<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">AutoShow</string>
    <string name="apply_content">申请人号码：%s\n操作：%s</string>
    <string name="apply_limit_gear">申请开启挡位限制</string>
    <string name="apply_relieve_gear">申请关闭挡位限制</string>
    <string name="autoshow">展车模式</string>
    <string name="autoshow_aircondition">限制空调开启</string>
    <string name="autoshow_experience_mode">疲劳与分神检测模拟体验</string>
    <string name="autoshow_face_identification">人脸登录体验</string>
    <string name="autoshow_highvoltag">禁止车辆行驶（保持挡位失效）\n注：此功能必须结合刷特定VCU版本才生效</string>
    <string name="autoshow_introduce">请输入管理员手机号：</string>
    <string name="autoshow_llu_close">关闭</string>
    <string name="autoshow_llu_cycle">周期性灯语</string>
    <string name="autoshow_music_cycle">音乐灯语</string>
    <string name="autoshow_setting">可以进行以下设置：</string>
    <string name="autoshow_title">展车模式</string>
    <string name="autoshow_vcu">限制车辆行驶</string>
    <string name="autoshow_volume">限制媒体音量(音量减半)</string>
    <string name="autoshow_welcome">扬声器随车门升降</string>
    <string name="button_modify">确定</string>
    <string name="button_quit">退出</string>
    <string name="countdown_format">%秒后重新获取</string>
    <string name="cycle_llu_fail">双闪或者前大灯已打开，无法播放周期性灯语</string>
    <string name="dialog_title_vertify">管理员身份验证</string>
    <string name="empty_phone_number">手机号码为空，请重新输入！</string>
    <string name="enter_autoshow_modify">更改配置</string>
    <string name="enter_autoshow_setting">进入展车模式</string>
    <string name="exhibition_mode_entered">已进入展车模式，请先退出</string>
    <string name="gear_limit_apply_tips">注意：申请已提交，稍后400客服将会主动与您电话联系。\n在此期间，请勿关闭窗口，申请者请勿离开车辆，直至挡位限制成功可做其他操作。</string>
    <string name="gear_limit_apply_tips2">注意：申请已提交，稍后400客服将会主动与您电话联系。\n\n在此期间，请勿关闭窗口，申请者请勿离开车辆，直至挡位限制成功可做其他操作。</string>
    <string name="gear_limit_msg">注意：若要申请挡位限制，请在车辆解锁后直接申请，不要挂挡，确保仪表挡位处无Ready字样。</string>
    <string name="get_code_again">重新获取</string>
    <string name="get_code_success">获取验证码成功，请在手机端及时查收</string>
    <string name="hint">温馨提示</string>
    <string name="input_code">请输入验证码：</string>
    <string name="input_code_hint">输入验证码</string>
    <string name="input_invalid_code">请输入正确格式的验证码！</string>
    <string name="input_phone">请输入管理员手机号：</string>
    <string name="input_phone_hint">手机号</string>
    <string name="input_vertify_code">请输入验证码</string>
    <string name="invalid_phone_format">手机号不可用</string>
    <string name="keep_p_gear">车辆当前已保持P挡</string>
    <string name="limit_gear">申请挡位限制</string>
    <string name="llu_effect_condition_disable">行车中或转向灯、后雾灯激活时无法播放外部灯语</string>
    <string name="llu_title">灯语效果\t\t\t请确保车辆设置中灯语总开关已开启</string>
    <string name="log_already_upload">日志已经上传</string>
    <string name="logout_autoshow_setting">退出展车模式</string>
    <string name="net_error">网络不可用，请检查网络</string>
    <string name="next_setup">下一步</string>
    <string name="no_vehicles">禁止车辆行驶 (保持P挡)</string>
    <string name="relieve_gear">解除挡位限制</string>
    <string name="search_menu_title">Search</string>
    <string name="send_code_error">发送验证码失败</string>
    <string name="send_vertify_code">获取验证码</string>
    <string name="shared_lib_path">/system/vendor/lib/irdeto/</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="test_drive_entered">已进入试驾模式，请先退出</string>
    <string name="testdrive_title">试驾模式</string>
    <string name="vertify_failed">验证失败，网络故障，请检查网络</string>
    <string name="vui_label_activity_back">返回</string>
    <string name="vui_label_cancel">取消</string>
    <string name="vui_label_close_activity">关闭</string>
    <string name="vui_label_close_dialog">关闭</string>
    <string name="vui_label_confirm">确认</string>
    <string name="vui_label_dialog">对话框|弹窗</string>
    <string name="vui_label_display_password">显示</string>
    <string name="vui_label_hide_password">隐藏</string>
    <string name="vui_label_input">输入</string>
    <string name="vui_label_reset">重设|清空|重置</string>
    <string name="vui_label_search">搜索</string>
    <string name="waitting">网络校验中...</string>
    <string name="x_capital_off">close</string>
    <string name="x_capital_on">open</string>
    <string name="x_countdown_tips">%s (%ss)</string>
    <string name="x_date_picker_day">%d</string>
    <string name="x_date_picker_year">%d</string>
    <string name="x_font_typeface_bold">xpeng-fonts-bold</string>
    <string name="x_font_typeface_medium">xpeng-fonts-medium</string>
    <string name="x_font_typeface_number">xpeng-fonts-number</string>
    <string name="x_font_typeface_number_bold">xpeng-fonts-number-bold</string>
    <string name="x_font_typeface_regular">xpeng-fonts-regular</string>
    <string name="x_loading_dialog_message">loading...</string>
    <string name="x_number_indicator_desc_format">%1$s/%2$s</string>
    <string name="x_time_picker_hour">%02d</string>
    <string name="x_time_picker_minute">%02d</string>
</resources>
