<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="@dimen/d21_window_width_major" android:layout_height="wrap_content">
    <com.xiaopeng.xui.widget.XRelativeLayout android:orientation="horizontal" android:id="@+id/titleBar_view" android:layout_width="match_parent" android:layout_height="@dimen/item_height_major">
        <com.xiaopeng.xui.widget.XImageButton android:id="@+id/x_dialog_close" android:layout_margin="@dimen/x_dialog_close_padding" style="@style/XButton.Icon.Large.Close"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/font_size_title" android:textColor="@color/x_theme_text_01" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autoshow_title" android:layout_centerInParent="true"/>
    </com.xiaopeng.xui.widget.XRelativeLayout>
    <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="74dp" android:layout_marginTop="39dp" android:layout_marginRight="74dp" android:layout_marginBottom="16dp">
        <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:id="@+id/autoShow_gear_layout" android:background="@drawable/llu_total_bg" android:layout_width="752dp" android:layout_height="@dimen/gear_limit_item_height">
            <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_03_size" android:textColor="@color/x_theme_text_01" android:id="@+id/autoShow_gear_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginTop="27dp" android:text="@string/no_vehicles"/>
            <com.xiaopeng.xui.widget.XButton android:id="@+id/autoShow_gear_bt" android:layout_width="612dp" android:layout_height="60dp" android:layout_marginLeft="56dp" android:layout_marginTop="32dp" android:text="@string/limit_gear" style="@style/XButton.Real.Mid.Positive"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XTextView android:textSize="27sp" android:textColor="@color/x_theme_text_01" android:id="@+id/padding_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="45dp" android:layout_marginBottom="45dp" android:lineSpacingExtra="10dp"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:id="@+id/autoShow_detail_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="74dp" android:layout_marginRight="74dp" android:layout_marginBottom="250dp">
        <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@+id/llu_layout" android:background="@drawable/llu_total_bg" android:layout_width="match_parent" android:layout_height="@dimen/item_llu_height_major" android:layout_marginBottom="16dp">
            <com.xiaopeng.xui.widget.XTextView android:textSize="35sp" android:textColor="@color/x_theme_text_01" android:id="@+id/llu_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginBottom="@dimen/llu_margin_bottom" android:text="@string/llu_title"/>
            <com.xiaopeng.xui.widget.XTabLayout android:layout_gravity="center_vertical" android:id="@+id/llu_tab" android:layout_width="644dp" android:layout_height="78dp" android:layout_marginLeft="40dp" app:selectTab="-1" app:titleTextSize="35sp" app:titles="@array/llu_tab"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/aircondition_layout" android:background="@drawable/llu_total_bg" android:layout_width="match_parent" android:layout_height="@dimen/item_height_major" android:layout_marginBottom="16dp">
            <com.xiaopeng.xui.widget.XSwitch android:id="@+id/aircondition_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/switch_thumb_margin" android:layout_marginRight="@dimen/switch_thumb_margin"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="35sp" android:textColor="@color/x_theme_text_01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autoshow_aircondition"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/welcome_layout" android:background="@drawable/llu_total_bg" android:layout_width="match_parent" android:layout_height="@dimen/item_height_major">
            <com.xiaopeng.xui.widget.XSwitch android:id="@+id/welcome_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/switch_thumb_margin" android:layout_marginRight="@dimen/switch_thumb_margin"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="35sp" android:textColor="@color/x_theme_text_01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autoshow_welcome"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
    </com.xiaopeng.xui.widget.XLinearLayout>
</com.xiaopeng.xui.widget.XLinearLayout>
