<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:descendantFocusability="blocksDescendants" android:layout_width="@dimen/d21_window_width_major" android:layout_height="@dimen/d21b_window_height_major">
    <com.xiaopeng.xui.widget.XLinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.xiaopeng.xui.widget.XImageButton android:id="@+id/x_dialog_close" android:layout_marginTop="14dp" android:layout_marginStart="14dp" style="@style/XButton.Icon.Large.Close"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="38sp" android:textColor="@color/x_theme_text_01" android:gravity="center" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48dp" android:text="@string/autoshow_title" android:layout_weight="1"/>
        <com.xiaopeng.xui.widget.XImageButton android:visibility="invisible" android:layout_marginTop="14dp" android:layout_marginStart="14dp" style="@style/XButton.Icon.Large.Close"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/setting_switch_layout" android:background="@drawable/llu_total_bg" android:layout_width="match_parent" android:layout_height="100dp" android:layout_marginTop="62dp" android:layout_marginStart="100dp" android:layout_marginEnd="100dp">
        <com.xiaopeng.xui.widget.XSwitch android:id="@+id/setting_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/switch_thumb_margin" android:layout_marginRight="@dimen/switch_thumb_margin"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="28sp" android:textColor="@color/x_theme_text_01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autoshow_title"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="32dp" android:layout_centerVertical="true" android:layout_marginStart="100dp" android:layout_marginEnd="100dp">
        <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/aircondition_layout" android:background="@drawable/llu_item_bg" android:layout_width="match_parent" android:layout_height="100dp" android:layout_marginTop="2dp">
            <com.xiaopeng.xui.widget.XSwitch android:id="@+id/aircondition_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/switch_thumb_margin" android:layout_marginRight="@dimen/switch_thumb_margin"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="28sp" android:textColor="@color/x_theme_text_01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autoshow_aircondition"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/volume_layout" android:background="@drawable/llu_item_last_bg" android:layout_width="match_parent" android:layout_height="100dp" android:layout_marginTop="2dp">
            <com.xiaopeng.xui.widget.XSwitch android:id="@+id/volume_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/switch_thumb_margin" android:layout_marginRight="@dimen/switch_thumb_margin"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="28sp" android:textColor="@color/x_theme_text_01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autoshow_volume"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XRelativeLayout android:orientation="horizontal" android:background="@drawable/llu_total_bg" android:layout_width="match_parent" android:layout_height="240dp" android:layout_marginTop="32dp">
            <com.xiaopeng.xui.widget.XTextView android:textSize="28sp" android:textColor="@color/x_theme_text_01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="36dp" android:layout_marginTop="31dp" android:text="禁止车辆行驶（保持P挡）" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"/>
            <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:textColor="@color/x_theme_text_01" android:id="@+id/btn_forbidden" android:layout_width="wrap_content" android:layout_height="80dp" android:layout_marginLeft="56dp" android:layout_marginBottom="46dp" android:text="@string/limit_gear" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" style="@style/XButton.Ghost.Large.Positive"/>
            <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:textColor="@color/x_theme_text_01" android:id="@+id/btn_forbidden_cancel" android:layout_width="wrap_content" android:layout_height="80dp" android:layout_marginRight="55dp" android:layout_marginBottom="46dp" android:text="@string/relieve_gear" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" style="@style/XButton.Ghost.Large.Positive"/>
        </com.xiaopeng.xui.widget.XRelativeLayout>
    </com.xiaopeng.xui.widget.XLinearLayout>
</com.xiaopeng.xui.widget.XLinearLayout>
